# S4-Cpp-TP

Refactoring-Exercises-STEP1/.github/workflows/: build_and_run.yml
Refactoring-Exercises-STEP1/01-The trivia game/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
Refactoring-Exercises-main/: CMakeLists.txt  README.md
Refactoring-Exercises-main/01-The trivia game/: CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp
